--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello world!</h1>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Моя тестовая страница</title>
+    <style>
+      background-color: gray;
+    </style>
+  </head>
+  <body>
+    <h1>Free FL Studio</h1>
+  </body>
+</html>
