--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <title>Моя тестовая страница</title>
     <style>
-      background-color: gray;
+       body{
+         background-color: #3366CC; /* Цвет фона веб-страницы */
+       } 
     </style>
   </head>
   <body>
