--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Моя тестовая страница</title>
     <style>
        body{
-         background-color: #3366CC; /* Цвет фона веб-страницы */
+         background-color: black; /* Цвет фона веб-страницы */
        } 
     </style>
   </head>
