--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Моя тестовая страница</title>
+    <title>Free FL Studio Download</title>
     <style>
        body{
          background-color: black; /* Цвет фона веб-страницы */
        } 
+       h1, h2, h3, h4, h5, h6{
+         color: white;
+       }
     </style>
   </head>
   <body>
