--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
   </head>
   <body>
-    <h1>Free FL Studio</h1>
+    <h6><img src="https://w7.pngwing.com/pngs/190/428/png-transparent-fl-studio-mobile-digital-audio-workstation-line-android-food-studio-orange-thumbnail.png"></h6><h1>Free FL Studio</h1>
   </body>
 </html>
