--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <style>
        body{
-         background-color: black; /* Цвет фона веб-страницы da logo*/
+         background-color: black; /* Color Цвет фона веб-страницы da logo*/
        } 
        h1, h2, h3, h4, h5, h6{
          color: white;
