--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
   </head>
   <body>
-    <h6><img src="pngwing.com.png"></h6><h1>Free FL Studio</h1>
+    <h6><img src="pngwing.com.png" size="20%"></h6><h1>Free FL Studio</h1>
   </body>
 </html>
