--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     </style>
   </head>
   <body>
-    <h6><img src="pngwing.com.png" width="70"></h6><h1>Free FL Studio</h1>
+    <table>
+      <tr>
+        <td>
+          <img src="pngwing.com.png" width="70">
+        </td>
+        <td>
+          <h1>Free FL Studio</h1>
+        </td>
+      </tr>
+</table>
   </body>
 </html>
