--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
     <br>
     <div align="center">
       <h6>Powered by GitHub - 2023</h6>
-      <img src="https://assets.stickpng.com/images/629b7adc7c5cd817694c3231.png" width="70" align="center">
+      <img src="git.png" width="70" align="center">
       <h6>Приложения и данные на сайте не являются оффициальным ПО! Вся ответственность за ваше оборудование только на вас! Удачного использования!</h6>
     </div>
     <br>
